--- a/2.html
+++ b/2.html
@@ -1,17 +1,58 @@
 <!DOCTYPE html>
 <html>
  <head>
-<title>공주예찬 봇 명령어 목록</title>
+<title>디스코드 공주예찬</title>
 <meta charset="utf-8">
  </head>
-
+<style>
+  a{
+    color:black;
+    text-decoration: none;
+  }
+  h1{
+    font-size: 50px;
+    text-align: center;
+    border-bottom:2px solid gray;
+    margin: 0;
+    padding: 20px;
+  }
+  #grid ol{
+    border-right: 2px solid gray;
+    width: 120px;
+    margin: 0;
+    padding-top: 20px;
+    padding-right: 0px;
+    padding-left: 40px;
+  }
+  body{
+    margin: 0;
+  }
+  #grid{
+    display: grid;
+    grid-template-columns:150px 1fr
+  }
+  h2{
+    padding-left: 20px;
+  }
+  h3{
+    padding-left: 20px;
+  }
+  #pp{
+    padding-left: 20px;
+  }
+  .saw{
+    color:gray;
+  }
+</style>
  <body>
   <h1><a href="index.html">공주예찬</a></h1>
-  <ol>
-    <li><a href="1.html">이용 안내</a></li>
+<div id = grid>
+   <ol>
+    <li><a href="1.html" class="saw">이용 안내</a></li>
     <li><a href="2.html">명령어목록</a></li>
-    <li><a href="3.html">만든이</a></li>
+    <li><a href="3.html" class="saw">만든이</a></li>
   </ol>
+<div>
   <h2>명령어 목록</h2>
   <h3>도박하기</h3>
   <ul>
@@ -19,13 +60,16 @@
    <li><strong>!잔액</strong> - 현재 남은 잔액을 확인합니다.</li>
    <li><strong>!랭킹</strong> - 현재 갑부 랭킹을 확인합니다.</li>
   </ul>
-  <h3>가위바위보 하는법</h3>
-  <p>가위바위보를 하여 돈을 따거나 잃을 수 있습니다 게임에서 이기면
-  2000원을 지급받고 게임에서 지면 2000원을 잃습니다.</p>
-  <ul>
-    <li><strong>!가위</strong></li>
-    <li><strong>!바위</strong></li>
-    <li><strong>!보</strong></li>
-  </ul>
+</ul>
+<h3>가위바위보 하는법</h3>
+<p id = pp>가위바위보를 하여 돈을 따거나 잃을 수 있습니다 게임에서 이기면
+2000원을 지급받고 게임에서 지면 2000원을 잃습니다.</p>
+<ul>
+  <li><strong>!가위</strong></li>
+  <li><strong>!바위</strong></li>
+  <li><strong>!보</strong></li>
+</ul>
+</div>
+</div>
  </body>
 </html>
