--- a/3.html
+++ b/3.html
@@ -1,18 +1,58 @@
 <!DOCTYPE html>
 <html>
  <head>
-<title>공주예찬 봇 만든이</title>
+<title>디스코드 공주예찬</title>
 <meta charset="utf-8">
  </head>
-
+<style>
+  a{
+    color:black;
+    text-decoration: none;
+  }
+  h1{
+    font-size: 50px;
+    text-align: center;
+    border-bottom:2px solid gray;
+    margin: 0;
+    padding: 20px;
+  }
+  #grid ol{
+    border-right: 2px solid gray;
+    width: 120px;
+    margin: 0;
+    padding-top: 20px;
+    padding-right: 0px;
+    padding-left: 40px;
+  }
+  body{
+    margin: 0;
+  }
+  #grid{
+    display: grid;
+    grid-template-columns:150px 1fr
+  }
+  h2{
+    padding-left: 20px;
+  }
+  #pp{
+    padding-left: 30px;
+  }
+  .saw{
+    color:gray;
+  }
+</style>
  <body>
   <h1><a href="index.html">공주예찬</a></h1>
-  <ol>
-    <li><a href="1.html">이용 안내</a></li>
-    <li><a href="2.html">명령어목록</a></li>
+<div id = grid>
+   <ol>
+    <li><a href="1.html" class="saw">이용 안내</a></li>
+    <li><a href="2.html" class="saw">명령어목록</a></li>
     <li><a href="3.html">만든이</a></li>
   </ol>
+<div>
   <h2>웹 페이지 개발 및 디스코드 봇 개발자</h2>
-  <p><strong>아가#7941</strong></p>
+  <p id = pp><strong>아가#7941</strong></p>
+</div>
+</div>
  </body>
 </html>
