--- a/index.html
+++ b/index.html
@@ -4,14 +4,49 @@
 <title>디스코드 공주예찬</title>
 <meta charset="utf-8">
  </head>
-
+<style>
+  a{
+    color:black;
+    text-decoration: none;
+  }
+  h1{
+    font-size: 50px;
+    text-align: center;
+    border-bottom:2px solid gray;
+    margin: 0;
+    padding: 20px;
+  }
+  #grid ol{
+    border-right: 2px solid gray;
+    width: 120px;
+    margin: 0;
+    padding-top: 20px;
+    padding-right: 0px;
+    padding-left: 40px;
+  }
+  body{
+    margin: 0;
+  }
+  #grid{
+    display: grid;
+    grid-template-columns:150px 1fr
+  }
+  h2{
+    padding-left: 20px;
+  }
+  img{
+    padding-left: 20px;
+  }
+</style>
  <body>
   <h1><a href="index.html">공주예찬</a></h1>
-  <ol>
+<div id = grid>
+   <ol>
     <li><a href="1.html">이용 안내</a></li>
     <li><a href="2.html">명령어목록</a></li>
     <li><a href="3.html">만든이</a></li>
   </ol>
+<div>
   <h2>디스코드 공주예찬 봇</h2>
   <img src="공주예찬 로고.png" width="200">
   <ul>
@@ -20,5 +55,7 @@
    <li><p><strong>바로가기 discord 페이지</strong><br><a href="https://discord.com/" target="_blank" title="discord.com">
      discord.com</a></p></li>
   </ul>
+</div>
+</div>
  </body>
 </html>
