--- a/1.html
+++ b/1.html
@@ -38,7 +38,7 @@
     padding-left: 20px;
   }
   .saw{
-    color:gray;
+    color=gray;
   }
 </style>
  <body>
@@ -51,12 +51,10 @@
   </ol>
 <div>
   <h2>이용 안내</h2>
-  <img src="공주예찬 로고.png" width="200">
+
   <ul>
-   <li><strong>노래 재생</strong>, <u>도박</u> 기능이 있습니다</li>
-   <li><p>디스코드에서 사용 가능한 한국 봇 입니다</p></li>
-   <li><p><strong>바로가기 discord 페이지</strong><br><a href="https://discord.com/" target="_blank" title="discord.com">
-     discord.com</a></p></li>
+   <li>봇 명령어 목록에서 전체적인 명령어를 확인하세요.</li>
+   <li><p>봇 기능 건의/장애/문의는 디스코드 <strong>아가#7941</strong> 문의</p></li>
   </ul>
 </div>
 </div>
